<resources>
    <string name="app_name">My Application</string>
    <string name="no_internet">no_internet_connection</string>
    <string name="network_error">network_error</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="invalid_user_name">iNot a valid username</string>
    <string name="invalid_user_and_password">invalid_user_and_password</string>
    <string name="invalid_search_item">invalid_search_item</string>

    <string name="refresh">refresh</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="title_activity_recipe_details">Recipe Details</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username_and_password">please check your username and password</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="test_password">anil</string>
    <string name="test_email">anil@gmail.com</string>
    <string name="no_data">No Data</string>
    <string name="search_hint">Search by name</string>
    <string name="mSearch">Search Here</string>
</resources>